--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -18,7 +18,7 @@ jobs:
         script: |
           source /etc/profile
           cd ~/local/mongodb/mongodb-linux-x86_64-3.0.6/bin
-          ./mongod -f mongodb.conf &
+          sudo ./mongod -f mongodb.conf &
           cd ~/go/src/conch
           git pull
           go build
