--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -18,6 +18,5 @@ jobs:
         script: |
           source /etc/profile
           cd ~/local/mongodb/mongodb-linux-x86_64-3.0.6/bin
-          ./mongod -f mongodb.conf
-          cd ~
-          ps -A
+          ./mongod -f ./mongodb.conf
+          touch test.txt
