--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -18,5 +18,4 @@ jobs:
         script: |
           source /etc/profile
           cd ~/local/mongodb/mongodb-linux-x86_64-3.0.6/bin
-          ./mongod -f ./mongodb.conf
-          touch test.txt
+          ./mongod -f ./mongodb.conf --fork
