--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -19,3 +19,4 @@ jobs:
           source /etc/profile
           cd ~/local/mongodb/mongodb-linux-x86_64-3.0.6/bin
           ./mongod -f ./mongodb.conf --fork
+          exit
